# learning_gtk

./: CMakeLists.txt  README.md  window_main.glade
01_gtkwin/: main.c
01_win/: CMakeLists.txt  main.c  window_main.glade
02_button/: CMakeLists.txt  main.c  window_main.glade
02_gtklabel/: main.c
03_grid/: CMakeLists.txt  window_main.glade
03_gtkbutton/: main.c
04_gtkbox/: main.c
04_label/: CMakeLists.txt  main.c  window_main.glade
05_entry/: CMakeLists.txt  main.c  window_main.glade
05_gtktextview/: main.c
06_gtkscrolledwindow/: main.c
06_radio/: CMakeLists.txt  main.c  window_main.glade
07_filechooser/: CMakeLists.txt  main.c  window_main.glade
07_gtkapp_open/: main.c
08_gtknotebook/: main.c
09_textfileeditor1/: main.c
10_gtkbuilder/: main.c  meson.build  tfe.gresource.xml  tfe.ui  tfetextview.c  tfetextview.h
